# genta-rs

./: Cargo.toml  README.md  build.rs
dev/: shell.nix
src/: lib.rs  main.rs
tracker_sparql/: bindings.rs  ffi.rs  lib.rs  sparql.h
