[package]
name = "genta"
version = "0.1.0"
authors = ["Hernawan Fa'iz Abdillah <hernawan.faiz@abdillah.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "genta"
path = "src/lib.rs"

[dependencies]
libc = "0.2.80"

[build-dependencies]
bindgen = "0.55.1"
pkg-config = "0.3.19"